--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./assets/bootstrap.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <title>Abitrage Tracker</title>
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="assets/bootstrap.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
     <script src="AppInit.js"></script>
 </body>
 
